--- a/dart/index.html
+++ b/dart/index.html
@@ -21,7 +21,7 @@
             <header class="header">
                 <a href="#" class="header__logo">
                     <div class="logo__img">
-                        <img src="/images/logo.png" alt="">
+                        <img src="https://yadi.sk/i/LkGJkNQSUsz5zg" alt="">
                     </div>
                     <div class="logo__text">
                         <div class="logo__text--small">dart</div>
