--- a/dart/index.html
+++ b/dart/index.html
@@ -7,7 +7,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="/fonts.css">
+    <link rel="stylesheet" href="/dart/fonts.css">
     <link rel="stylesheet" href="style.css">
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/slick.min.js"></script>
