--- a/dart/index.html
+++ b/dart/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="intro__video">
                     <div class="video">
-                        <img src="/images/play.png" alt="">
+                        <img src="/dart/images/play.png" alt="">
                         <!-- <img src="/https://yadi.sk/i/MtcDdXlQWNeejw" alt=""> -->
                         <div class="video__text">wacht the video</div>
                         <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/wn83dG_I0sg" frameborder="0"
@@ -109,7 +109,7 @@
 
             <div class="manager__items">
                 <div class="man__item">
-                    <img src="/images/man-1.png" alt="">
+                    <img src="/dart/images/man-1.png" alt="">
                     <div class="man__item--title">Title Goes Here</div>
                     <div class="man__item--text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="man__item">
-                    <img src="/images/man-2.png" alt="">
+                    <img src="/dart/images/man-2.png" alt="">
                     <div class="man__item--title">Title Goes Here</div>
                     <div class="man__item--text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="man__item">
-                    <img src="/images/man-3.png" alt="">
+                    <img src="/dart/images/man-3.png" alt="">
                     <div class="man__item--title">Title Goes Here</div>
                     <div class="man__item--text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -141,7 +141,7 @@
             <div class="numbers__item">
                 <div class="numbers__item--content">
                     <div class="content__img home">
-                        <img src="/images/items/Ellipse 1.png" alt="">
+                        <img src="/dart/images/items/Ellipse 1.png" alt="">
                     </div>
 
                     <div class="contents">
@@ -154,7 +154,7 @@
             <div class="numbers__item">
                 <div class="numbers__item--content">
                     <div class="content__img down">
-                        <img src="/images/items/Ellipse 1.png" alt="">
+                        <img src="/dart/images/items/Ellipse 1.png" alt="">
                     </div>
 
                     <div class="contents">
@@ -166,7 +166,7 @@
             <div class="numbers__item">
                 <div class="numbers__item--content">
                     <div class="content__img team">
-                        <img src="/images/items/Ellipse 1.png" alt="">
+                        <img src="/dart/images/items/Ellipse 1.png" alt="">
                     </div>
 
                     <div class="contents">
@@ -178,7 +178,7 @@
             <div class="numbers__item">
                 <div class="numbers__item--content">
                     <div class="content__img down last">
-                        <img src="/images/items/Ellipse 1.png" alt="">
+                        <img src="/dart/images/items/Ellipse 1.png" alt="">
                     </div>
 
                     <div class="contents">
