--- a/dart/index.html
+++ b/dart/index.html
@@ -207,7 +207,7 @@
                 <div class="info__title">statistics</div>
                 <div class="info__content">
                     <div class="info__img">
-                        <img src="/images/info.png" alt="">
+                        <img src="/dart/images/info.png" alt="">
                     </div>
                     <div class="info__text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -222,7 +222,7 @@
                 <div class="info__title">inbox</div>
                 <div class="info__content">
                     <div class="info__img">
-                        <img src="/images/info.png" alt="">
+                        <img src="/dart/images/info.png" alt="">
                     </div>
                     <div class="info__text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -237,7 +237,7 @@
                 <div class="info__title">team</div>
                 <div class="info__content">
                     <div class="info__img">
-                        <img src="/images/info.png" alt="">
+                        <img src="/dart/images/info.png" alt="">
                     </div>
                     <div class="info__text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -252,7 +252,7 @@
                 <div class="info__title">seting</div>
                 <div class="info__content">
                     <div class="info__img">
-                        <img src="/images/info.png" alt="">
+                        <img src="/dart/images/info.png" alt="">
                     </div>
                     <div class="info__text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -267,7 +267,7 @@
                 <div class="info__title">feed</div>
                 <div class="info__content">
                     <div class="info__img">
-                        <img src="/images/info.png" alt="">
+                        <img src="/dart/images/info.png" alt="">
                     </div>
                     <div class="info__text">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
@@ -301,7 +301,7 @@
                 <div class="slider__virtical">
                     <div class="slider__virtical--item">
                         <div class="slider__img">
-                            <img src="/images/about-1.png" alt="">
+                            <img src="/dart/images/about-1.png" alt="">
                         </div>
 
                         <div class="slider__content">
@@ -320,7 +320,7 @@
 
                     <div class="slider__virtical--item">
                         <div class="slider__img">
-                            <img src="/images/about-2.png" alt="">
+                            <img src="/dart/images/about-2.png" alt="">
                         </div>
 
                         <div class="slider__content">
@@ -339,7 +339,7 @@
 
                     <div class="slider__virtical--item">
                         <div class="slider__img">
-                            <img src="/images/about-1.png" alt="">
+                            <img src="/dart/images/about-1.png" alt="">
                         </div>
 
                         <div class="slider__content">
@@ -358,7 +358,7 @@
 
                     <div class="slider__virtical--item">
                         <div class="slider__img">
-                            <img src="/images/about-2.png" alt="">
+                            <img src="/dart/images/about-2.png" alt="">
                         </div>
 
                         <div class="slider__content">
@@ -397,22 +397,22 @@
                 <div class="slid__inner">
                     <div class="slider__team">
                         <div class="slider__team--item">
-                            <img src="/images/team1.png" alt="">
+                            <img src="/dart/images/team1.png" alt="">
                         </div>
                         <div class="slider__team--item">
-                            <img src="/images/team2.png" alt="">
+                            <img src="/dart/images/team2.png" alt="">
                         </div>
                         <div class="slider__team--item">
-                            <img src="/images/team1.png" alt="">
+                            <img src="/dart/images/team1.png" alt="">
                         </div>
                         <div class="slider__team--item">
-                            <img src="/images/team2.png" alt="">
+                            <img src="/dart/images/team2.png" alt="">
                         </div>
                         <div class="slider__team--item">
-                            <img src="/images/team1.png" alt="">
+                            <img src="/dart/images/team1.png" alt="">
                         </div>
                         <div class="slider__team--item">
-                            <img src="/images/team2.png" alt="">
+                            <img src="/dart/images/team2.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -493,19 +493,19 @@
                 </div>
                 <div class="socials">
                     <div class="social__item">
-                        <img src="/images/socials/1.png" alt="">
+                        <img src="/dart/images/socials/1.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/2.png" alt="">
+                        <img src="/dart/images/socials/2.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/3.png" alt="">
+                        <img src="/dart/images/socials/3.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/4.png" alt="">
+                        <img src="/dart/images/socials/4.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/5.png" alt="">
+                        <img src="/dart/images/socials/5.png" alt="">
                     </div>
                 </div>
             </div>
@@ -548,7 +548,7 @@
             <header class="header">
                 <a href="#" class="header__logo">
                     <div class="logo__img">
-                        <img src="/images/logo.png" alt="">
+                        <img src="/dart/images/logo.png" alt="">
                     </div>
                     <div class="logo__text">
                         <div class="logo__text--small">dart</div>
@@ -604,19 +604,19 @@
                 </div>
                 <div class="socials">
                     <div class="social__item">
-                        <img src="/images/socials/1.png" alt="">
+                        <img src="/dart/images/socials/1.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/2.png" alt="">
+                        <img src="/dart/images/socials/2.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/3.png" alt="">
+                        <img src="/dart/images/socials/3.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/4.png" alt="">
+                        <img src="/dart/images/socials/4.png" alt="">
                     </div>
                     <div class="social__item">
-                        <img src="/images/socials/5.png" alt="">
+                        <img src="/dart/images/socials/5.png" alt="">
                     </div>
                 </div>
             </div>
