--- a/dart/index.html
+++ b/dart/index.html
@@ -12,7 +12,7 @@
     <script src="/dart/js/jquery-3.5.1.min.js"></script>
     <script src="/dart/js/slick.min.js"></script>
     <script src="/dart/js/style.js"></script>
-    <title>Document</title>
+    <title>dart</title>
 </head>
 
 <body>
@@ -529,7 +529,7 @@
                     <input type="text" class="small" placeholder="last name">
                     <input type="email" class="small" placeholder="email">
                     <input type="tel" class="small" placeholder="phone">
-                    <textarea placeholder="Message"></textarea>
+                    <textarea class="" placeholder="Message"></textarea>
                 </div>
                 <div class="submit">
                     <input type="checkbox">
