--- a/dart/index.html
+++ b/dart/index.html
@@ -529,7 +529,7 @@
                     <input type="text" class="small" placeholder="last name">
                     <input type="email" class="small" placeholder="email">
                     <input type="tel" class="small" placeholder="phone">
-                    <textarea class="" placeholder="Message"></textarea>
+                    <textarea class="text" placeholder="Message"></textarea>
                 </div>
                 <div class="submit">
                     <input type="checkbox">
