--- a/dart/index.html
+++ b/dart/index.html
@@ -554,29 +554,29 @@
                 </a>
                 <div class="header__nav">
                     <nav class="menu">
-                        <ul class="nav__menu">
+                        <ul class="nav__menu nav__menu">
                             <li>
-                                <a href="#" class="nav">
+                                <a href="#" class="nav nav--footer">
                                     home
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="nav">
+                                <a href="#" class="nav nav--footer">
                                     service
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="nav">
+                                <a href="#" class="nav nav--footer">
                                     Extension
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="nav">
+                                <a href="#" class="nav nav--footer">
                                     Pricing
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="nav">
+                                <a href="#" class="nav nav--footer">
                                     Help
                                 </a>
                             </li>
