--- a/mot1/index.html
+++ b/mot1/index.html
@@ -20,7 +20,7 @@
             <div class="logo__top-inner">
                 <a href="#" class="logo">
                     <span class="mot">
-                        <img src="/images/mot.png" alt="">
+                        <img src="/mot1/images/mot.png" alt="">
                     </span>
                     <span class="logo_text">
                         <span class="text-bold">mot</span>
@@ -112,10 +112,10 @@
                     <div class="slider__inner">
                         <div class="slider">
                             <div class="slider__item">
-                                <img src="/images/slider-mot.jpg" alt="">
+                                <img src="/mot1/images/slider-mot.jpg" alt="">
                             </div>
                             <div class="slider__item">
-                                <img src="/images/slider-mot2.jpg" alt="">
+                                <img src="/mot1/images/slider-mot2.jpg" alt="">
                             </div>
                         </div>
                     </div>
@@ -138,22 +138,22 @@
 
         <div class="offer__slider">
             <div class="offer__slider-item">
-                <img src="/images/cross1.jpg" alt="">
+                <img src="/mot1/images/cross1.jpg" alt="">
             </div>
             <div class="offer__slider-item">
-                <img src="/images/cross2.jpg" alt="">
+                <img src="/mot1/images/cross2.jpg" alt="">
             </div>
             <div class="offer__slider-item">
-                <img src="/images/cross3.jpg" alt="">
+                <img src="/mot1/images/cross3.jpg" alt="">
             </div>
             <div class="offer__slider-item">
-                <img src="/images/cross1.jpg" alt="">
+                <img src="/mot1/images/cross1.jpg" alt="">
             </div>
             <div class="offer__slider-item">
-                <img src="/images/cross2.jpg" alt="">
+                <img src="/mot1/images/cross2.jpg" alt="">
             </div>
             <div class="offer__slider-item">
-                <img src="/images/cross3.jpg" alt="">
+                <img src="/mot1/images/cross3.jpg" alt="">
             </div>
         </div>
     </section>
@@ -191,7 +191,7 @@
             <div class="slider__fly">
                 <div class="slider__fly--item">
                     <div class="fly__img">
-                        <img src="/images/fly-item.jpg" alt="">
+                        <img src="/mot1/images/fly-item.jpg" alt="">
                     </div>
 
                     <div class="slider__fly--text">
@@ -210,7 +210,7 @@
                 </div>
                 <div class="slider__fly--item">
                     <div class="fly__img">
-                        <img src="/images/fly-item.jpg" alt="">
+                        <img src="/mot1/images/fly-item.jpg" alt="">
                     </div>
 
                     <div class="slider__fly--text">
@@ -229,7 +229,7 @@
                 </div>
                 <div class="slider__fly--item">
                     <div class="fly__img">
-                        <img src="/images/fly-item.jpg" alt="">
+                        <img src="/mot1/images/fly-item.jpg" alt="">
                     </div>
 
                     <div class="slider__fly--text">
@@ -264,31 +264,31 @@
             </div>
             <div class="bikes__slider">
                 <div class="bikes__slider--item">
-                    <img src="/images/bike1.jpg" alt="">
+                    <img src="/mot1/images/bike1.jpg" alt="">
                     <div class="click">
                         <a href="#" class="btn about__btn">click here</a>
                     </div>
                 </div>
                 <div class="bikes__slider--item">
-                    <img src="/images/bike2.jpg" alt="">
+                    <img src="/mot1/images/bike2.jpg" alt="">
                     <div class="click">
                         <a href="#" class="btn about__btn">click here</a>
                     </div>
                 </div>
                 <div class="bikes__slider--item">
-                    <img src="/images/bike3.jpg" alt="">
+                    <img src="/mot1/images/bike3.jpg" alt="">
                     <div class="click">
                         <a href="#" class="btn about__btn">click here</a>
                     </div>
                 </div>
                 <div class="bikes__slider--item">
-                    <img src="/images/bike4.jpg" alt="">
+                    <img src="/mot1/images/bike4.jpg" alt="">
                     <div class="click">
                         <a href="#" class="btn about__btn">click here</a>
                     </div>
                 </div>
                 <div class="bikes__slider--item">
-                    <img src="/images/bike1.jpg" alt="">
+                    <img src="/mot1/images/bike1.jpg" alt="">
                     <div class="click">
                         <a href="#" class="btn about__btn">click here</a>
                     </div>
@@ -314,7 +314,7 @@
         </div>
         <div class="blog__coll">
             <div class="blog__coll-img">
-                <img src="/images/blog1.jpg" alt="">
+                <img src="/mot1/images/blog1.jpg" alt="">
                 <div class="blog__coll-content">
                     <div class="blog__coll-title">
                         lorem Ipsum
@@ -333,7 +333,7 @@
                         Lorem Ipsum is simply
                     </div>
                 </div>
-                <img src="/images/blog2.jpg" alt="">
+                <img src="/mot1/images/blog2.jpg" alt="">
             </div>
 
 
@@ -348,7 +348,7 @@
                         Lorem Ipsum is simply
                     </div>
                 </div>
-                <img src="/images/blog3.png" alt="">
+                <img src="/mot1/images/blog3.png" alt="">
             </div>
             <div class="blog__coll-img">
                 <div class="blog__coll-content">
@@ -359,7 +359,7 @@
                         Lorem Ipsum is simply
                     </div>
                 </div>
-                <img src="/images/blog4.jpg" alt="">
+                <img src="/mot1/images/blog4.jpg" alt="">
             </div>
         </div>
     </section>
@@ -390,7 +390,7 @@
             <div class="logo__top-inner">
                 <a href="#" class="logo">
                     <span class="mot">
-                        <img src="/images/mot.png" alt="">
+                        <img src="/mot1/images/mot.png" alt="">
                     </span>
                     <span class="logo_text">
                         <span class="text-bold">mot</span>
