--- a/mot1/index.html
+++ b/mot1/index.html
@@ -11,7 +11,7 @@
     <script src="/mot1/js/jquery-3.5.1.min.js"></script>
     <script src="/mot1/js/slick.min.js"></script>
     <script src="/mot1/js/style.js"></script>
-    <title>Document</title>
+    <title>MOT</title>
 </head>
 
 <body>
