--- a/mot1/index.html
+++ b/mot1/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="glav">
     <section class="logo__top">
         <div class="container">
             <div class="logo__top-inner">
@@ -95,6 +96,7 @@
         </header>
 
     </section>
+</div>
 
     <section class="about">
         <div class="container">
