--- a/mot1/index.html
+++ b/mot1/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <button class="btn-top">back to up</button>
     <section class="logo__top">
         <div class="container">
             <div class="logo__top-inner">
