--- a/darts/index.html
+++ b/darts/index.html
@@ -611,12 +611,12 @@
                         <ul class="nav__menu">
                             <li>
                                 <a href="#" class="nav">
-                                    home
+                                    Home
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="nav">
-                                    service
+                                    Service
                                 </a>
                             </li>
                             <li>
