--- a/darts/index.html
+++ b/darts/index.html
@@ -482,7 +482,7 @@
                 </div>
                 <div class="slider__about--item">
                     <div class="slider__subtitle">
-                        hui-li
+                        Yan-lo
                     </div>
                     <div class="slider__subtext">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
