--- a/cex/index.html
+++ b/cex/index.html
@@ -338,7 +338,7 @@
                         <input type="text" class="order__form" placeholder="имя">
                         <input type="text" class="order__form" placeholder="Номер телефона">
                         <div class="form__down">
-                            <button class="btn__form">Заказать расчет</button>
+                            <button type="submit" class="btn__form">Заказать расчет</button>
                             <div class="agree">
                                 Нажимая кнопку "Заказать расчет", я даю согласие на обработку своих персональных данных
                             </div>
@@ -573,7 +573,7 @@
             <form class="howmach__form">
                 <input type="text" placeholder="Имя">
                 <input type="text" placeholder="Номер телефона">
-                <button class="howmach__btn">Заказать расчет</button>
+                <button type="submit" class="howmach__btn">Заказать расчет</button>
             </form>
             <div class="howmach__suptitle">
                 Нажимая кнопку "отправить", я даю согласие на обработку своих персональных данных
