--- a/cex/index.html
+++ b/cex/index.html
@@ -146,9 +146,9 @@
                         </div>
                         <div class="advantages__item-block">
                             <div class="block__images">
-                                <img src="/images/Ellipse 67.png" alt="" class="elipps">
+                                <img src="/cex/images/Ellipse 67.png" alt="" class="elipps">
                                 <div class="img__content">
-                                    <img src="/images/cubiki.png" class="cubiki__img" alt="">
+                                    <img src="/cex/images/cubiki.png" class="cubiki__img" alt="">
                                 </div>
                             </div>
                             <div class="block__title">
